--- a/cv.tex
+++ b/cv.tex
@@ -185,7 +185,7 @@ Machine Learning Engineer with experience building and deploying ML models in pr
         
         \textbf{ML Tools:}{PyTorch, JAX, WandB, Torch Lightning, Numpy, Pandas, Scikit-learn, Optuna, } \\ \vspace{3pt}
 
-        \textbf{Infrastructure:}{Azure, SLURM, FastAPI, Git, GitLab } \\ \vspace{3pt}
+        \textbf{Infrastructure: }{Azure, SLURM, FastAPI, Git, GitLab, Linux } \\ \vspace{3pt}
 
         
 	%\textbf{Techniques:}{CNN, RNN, Transformers, XGBoost, Random Forrest Models, Hypothesis Testing, GLMs, Gaussian Processes, Markov Chains, Deep Q-learning, Imitation Learning, SNGP, DUQ }
