--- a/cv.tex
+++ b/cv.tex
@@ -172,8 +172,8 @@
 
 %----------- INTRODUCTION -----------
 \section{Personal Statement}
-Machine Learning Engineer with experience building and deploying ML models in production fintech systems. Skilled in model optimization, scalable data pipelines, analytics and MLOps, with a track record of delivering meaurable impact through data-driven ML systems. Passionate about deep learning, large-scale ML infrastructure and building production-grade AI systems. Hold an MSc. in Computer Science and a Bachelor's in mathematics. Seeking a position as Machine Learning Engineer/Data Scientist to leverage my expertise to building impactful data-driven projects. 
-
+Machine Learning Engineer with 2+ years’ experience deploying ML systems in fintech (invoice automation, fraud detection and time series forecasting) and research expertise in optimization and transformer based architectures. Skilled at bridging deep learning research with scalable production systems, with hands-on experience in building end-to-end ML pipelines, model development and deployment. Holds a MSc in Computer Science and a bachelors in pure and applied Mathematics\\
+Seeking opportunities to apply ML expertise in end-to-end system development and research-driven production solutions.
 
 %----------- SKILLS -----------
 \section{Professional Skills}
@@ -206,7 +206,7 @@ Machine Learning Engineer with experience building and deploying ML models in pr
 {\textbf{Research Engineer}}{Sep 2025 \textbf{--} Present}
         \resumeItemListStart
 	\resumeItem{Researching methods to enhance the pre-training of GPT-style language models, targeting both improvements in training efficiency and the foundational understanding of the optimization process.}
-	\resumeItem{Particularly interested in understanding the Muon optimizer and its contemporaries in contrast to more popular adaptive methods}
+	\resumeItem{Particularly interested in understanding the Muon optimizer and it's advantages over adaptive methods}
         \resumeItemListEnd
 
     \resumeSubheading
@@ -220,9 +220,9 @@ Machine Learning Engineer with experience building and deploying ML models in pr
         \resumeItemListEnd
 	\resumeSubheading
 	{University Of Tübingen}{Tübingen, Germany}
-{\textbf{Student Researcher}}{May 2024 - September 2024}
+{\textbf{Research Assistant}}{May 2024 - September 2024}
 	\resumeItemListStart
-	\resumeItem{Researched the effectiveness of soft label datasets in improving the calibration of deep neural networks, comparing their utility against regularization techniques such as MixUp, Manifold MixUp, CutMix, and Dropout in distance-aware networks like SNGP, DUQ, and Mahalanobis Distance. (\href{https://github.com/sam-laing/soft_cifar}{Github Repository})
+	\resumeItem{Researched the effectiveness of soft label datasets in improving the calibration  and robustness of deep neural networks, comparing their utility against regularization techniques such as MixUp, Manifold MixUp, CutMix, and Dropout in distance-aware networks like SNGP, DUQ, and Mahalanobis Distance. (\href{https://github.com/sam-laing/soft_cifar}{Github Repository})
 	\resumeItemListEnd
 
 
@@ -268,9 +268,8 @@ Machine Learning Engineer with experience building and deploying ML models in pr
         %\small{\item{
 	%\textbf{Relevant coursework:} Deep Learning, Statistical Machine Learning, Probabalistic Machine Learning, Trustworthy Machine learning, Time Series Analysis, Self Driving Cars, Massively Parallel Computing (CUDA Programming), Information Theory }}
 
-%        \small{\item{
 			\textbf{Master's Thesis: }	
-	Researched adaptive and second-order optimizers (in particular, Muon) for transformer-based language models. In particular, was interested in pretraining efficiency and understanding training dynamics. Supervised by \href{http://orvi.altervista.org/}{Dr. Antonio Orvieto}}}
+	Fundamental research into adaptive and second-order optimizers (in particular, Muon) for transformer-based  pretraining efficiency and understanding training dynamics. Supervised by \href{http://orvi.altervista.org/}{Dr. Antonio Orvieto}}
 	\resumeItemListEnd
         \resumeSubHeadingListStart
     \resumeEducationHeading
@@ -278,7 +277,7 @@ Machine Learning Engineer with experience building and deploying ML models in pr
       {Ireland}
       {BA Mathematics;   \textbf{First Class Honors}}{Sep 2018 \textbf{--} Jun 2022}
 
-      \small{\textbf{\href{https://github.com/sam-laing/bachelor-thesis/blob/main/diss.pdf}{Bachelor Thesis}:} Applied category theoretical techniques (in particular simplicial homotopy theory) to prove several fundamental theorems of algebraic topology. Supervised by \href{https://www.maths.tcd.ie/people/kellyj/}{Dr Jack Kelly} }
+      \small{\textbf{\href{https://github.com/sam-laing/bachelor-thesis/blob/main/diss.pdf}{Bachelor Thesis}:} Applied category theoretical techniques (in particular model categories) to prove several fundamental theorems of algebraic topology. Supervised by \href{https://www.maths.tcd.ie/people/kellyj/}{Dr Jack Kelly} }
   \resumeSubHeadingListEnd
 
 
